updated reset url

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#39006e" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://source.unsplash.com" />
+    <!-- <link rel="preload" href="https://source.unsplash.com" /> -->
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap"
       rel="stylesheet"
