added mobile support & html2image

--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <!-- <link rel="preload" href="https://source.unsplash.com" /> -->
+    <!-- crossorigin="anonymous" -->
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap"
       rel="stylesheet"
     />
+    <!-- crossorigin="anonymous" -->
     <link
       href="https://fonts.googleapis.com/css2?family=Caveat&family=Damion&family=Dancing+Script&family=Indie+Flower&family=Knewave&family=Lobster&family=Londrina+Shadow&family=Pacifico&family=Passions+Conflict&family=Rouge+Script&family=Sacramento&family=Satisfy&family=Montserrat&family=Poppins&family=Roboto&display=swap"
       rel="stylesheet"
